# s3-sync

./: CMakeLists.txt  CMakePresets.json  README.md
s3-sync/: AWSManager.cpp  AWSManager.h  CLI.cpp  CLI.h  CMakeLists.txt  Error.cpp  Error.h  s3-sync.cpp  s3-sync.h
